1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range
1/23/14 require non-zero volume to be at least 0.1L, same as precision of volume indicator on beaker
1/23/14 make pH picker advance faster when held (reduced intervalDelay to 40ms from 100ms)
1/23/14 shorter points on graph indicators, move indicators closer to scale, less whitespace between scale and indicators (ok to overlap ticks)
1/23/14 move 'Reset All' buttons to same position (lower right) in all screens
1/23/14 add temporary icon for 'Basics' screen
1/23/14 move ph-scale-basics sim title to ph-scale-basics-strings_en.json
1/23/13 make 'Basics' screen an official part of ph-scale sim
1/23/13 MAJOR DESIGN CHANGES REQUESTED
# 1.0.0-dev.6 1/22/14
1/22/14 clip ratio feature to shape of solution in beaker
1/22/14 implement ratio feature as it was in Java, too slow to be usable, not clipped to solution bounds
1/22/14 add Beaker.bounds convenience property
1/21/14 replace instances of HTMLText with SubSupText
# 1.0.0-dev.5 1/21/14
1/21/14 zoom buttons for linear graph
1/20/14 robust implementation for vertical alignment of graph and pH scales
1/20/14 add options.range to PHScaleNode
1/19/14 reorganize CustomGraphNode so that order of instantiation in constructor matches order of appearance
1/19/14 detect and remember the graph ticks that correspond to the min and max pH values
1/19/14 move 'guide' lines for alignment of scale to the top and bottom ticks of the pH scale
1/19/14 temporary solution for vertical alignment of graph and pH scales
1/16/14 placeholder for SubSupText
1/16/14 center log/linear switch
1/16/14 shrink units switch if it exceeds maximum width, to handle i18n
1/16/14 migrate ExpandCollapseBar to sun
1/16/14 generalize ExpandCollapseBar
1/16/14 add placeholder for LinearGraph
1/16/14 attach beaker controls to left edge of beaker so that i18n strings have room to grow