@@ -5,8 +5,6 @@ TODO list for ph-scale (HTML5)
 IMPLEMENTATION
 
 HIGH
-- Basics: add option to auto-fill solution to a specified volume when a solute is selected. Set this to 0L
-  for ph-scale-basics, 0.5L for ph-scale
 - Solutions: remove scale from pH meter, add a probe that extends to bottom of beaker
 - Solutions: make collapse button on pH meter hide only the pH value
 - Solutions: make beaker wider
@@ -17,6 +15,7 @@ HIGH
 - Custom: use a fixed 0.5L of solution
 - Custom: add probe to pH meter that extends to bottom of beaker
 - Solutions: implement linear graph
+- animate auto-filling
 
 MEDIUM
 - performance of 'H3O+/OH- ratio' feature
