@@ -1,3 +1,4 @@
+1/23/14 Basics: auto-fill with a specified volume when a solute is selected. Set this to 0L for ph-scale-basics, 0.5L for ph-scale.
 1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range
 1/23/14 require non-zero volume to be at least 0.1L, same as precision of volume indicator on beaker
 1/23/14 make pH picker advance faster when held (reduced intervalDelay to 40ms from 100ms)
